--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,6 +2,17 @@
 <footer class="footer section-padding">
   <div class="grid">
     <div class="subscribe" id="subscribe">
+      <div class="subscribe__container">
+        <span class="subscribe__title">Subscribe</span>
+        <p class="subscribe__text">Get a weekly email of posts I’ve added to the site.</p>
+        {% include subscribe-form.html %}
+      </div>
+    </div>
+
+    <hr class="sep--white"/>
+
+    <div class="footer__container">
+
       {% include social.html %}
     </div>
   </div>
