커스텀 테스트

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,7 +55,7 @@ layout: default
 </div>
 
 <!-- Links to Previous/Next posts -->
-{% assign relatedTag = page.tags | first %}
+<!-- {% assign relatedTag = page.tags | first %}
 {% if relatedTag %}
   <section class="related section-padding">
     <div class="grid-xlarge">
@@ -78,4 +78,4 @@ layout: default
       </div>
     </div>
   </section>
-{% endif %}
+{% endif %} -->
