--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{% if page.title %}{{ page.title | escape }} | {{ site.title }}{% else %}{{ site.title | escape }}{% endif %}</title>
+<title>Eunji Jeong</title>
 <meta name="description" content="{{ site.description }}">
 
 <meta itemprop="name" content="{{ site.name }}">
@@ -29,6 +29,7 @@
 <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
 
 <link rel="stylesheet" href="{{ '/assets/css/app.min.css' | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | prepend: site.baseurl }}">
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl }}">
