--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -5,8 +5,8 @@
         <img src="{{ post.image }}" alt="{{ post.title }}" data-aos="fade-in" itemprop="image"/>
       </figure>
     {% endif %}
-    <div>
+    <!-- <div>
       <h2 class="posts__text"><strong itemprop="name">{{ post.title }}</strong> — <span itemprop="description">{{ post.content | strip_html | truncatewords: 35, "" }}</span></h2>
-    </div>
+    </div> -->
   </a>
 </article>
