커스텀 테스트

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,12 @@
 <link rel="icon" type="image/x-icon" href="{{ '/assets/images/favicon.ico' | prepend: site.baseurl }}">
 
 <link rel="stylesheet" href="{{ '/assets/css/app.min.css' | prepend: site.baseurl }}">
+
+<!-- eunji -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | prepend: site.baseurl }}">
+
+
+
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl }}">
@@ -44,3 +49,6 @@
     ga('send', 'pageview');
   </script>
 {% endif %}
+
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
