--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,6 +12,11 @@ html, body{
 	font-size: 3em;
 	font-weight: bold;
 }
+@media (max-width: 768px){
+	.intro{
+		font-size: 2.5em;
+	}
+}
 
 .header__title{
 	font-size: 28px;
