--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -46,3 +46,32 @@ main{
 	color: #3562ff;
 	display: block;
 }
+
+/*커서*/
+
+.cursor {
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.circle-cursor-outer {
+  width: 80px;
+  height: 80px;
+  border: 1px solid rgba(0,0,0,0.2);
+  z-index: 12000;
+  opacity: 0.5;
+}
+
+.circle-cursor-inner {
+  width: 5px;
+  height: 5px;
+  left: -2.5px;
+  top: -2.5px;
+  z-index: 11000;
+  background: #3562ff;
+}
+
