--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,10 @@
 <!-- The footer at the very bottom of the screen -->
 <footer class="footer section-padding">
-  <div class="grid">
-    <div class="footer__container">
-      {% include social.html %}
-    </div>
+  <div class="footer__container">
+    {% include social.html %}
+  </div>
+  <div class="copyright">
+    © Eunji Jeong. 2019
   </div>
 </footer>
 
