--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
   </main>
 
   {% include footer.html %}
-
+<!-- 
   <div class='cursor circle-cursor-inner'></div>
   <div class='cursor circle-cursor-outer'></div>
   <script type="text/javascript">
@@ -40,7 +40,7 @@ layout: compress
   	        });
   	    }, 100);
   	  })
-  </script>
+  </script> -->
 
 </body>
 </html>
