--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,7 +1,7 @@
 {% if site.social %}
-  <ul class="footer__social">
+  <ul>
     {% for social in site.social %}
-      <li><a href="{{ social['url'] }}" target="_blank"><i class="fa fa-{{ social['name'] }}"></i></a></li>
+      <li><a href="{{ social['url'] }}" target="_blank">{{ social['name'] }}</i></a></li>
     {% endfor %}
   </ul>
 {% endif %}
