--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <section class="post">
   <div>
-    {% if page.image %}
+    <!-- {% if page.image %}
       <div class="post__img">
         <div>
           <figure class="absolute-bg" style="background-image: url('{{ page.image }}');"></figure>
@@ -15,7 +15,7 @@ layout: default
       <div class="grid-small">
         <h2>{{ page.title }}</h2>
       </div>
-    </div>
+    </div> -->
 
     <div class="post__content section-padding">
       <div class="grid">
