포스트 추가

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ layout: default
       </div>
     </div> -->
 
-    <div class="post__content section-padding">
+    <div class="post__content">
       <div class="grid">
         <div id="markdown">
           {{content}}
