--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,6 @@
 html, body, h1, h2, h3, h4, h5, h6, #style-guide #markdown, .post-layout #markdown{
 	font-family: "Source Sans Pro","APPLE SD Gothic Neo",HelveticaNeue,Helvetica,"NanumGothic","맑은 고딕","Malgun Gothic",arial,sans-serif,"Source Sans Pro",sans-serif !important;
+	line-height: 1.6;
 }
 
 ::selection {    
@@ -98,6 +99,9 @@ main{
 	width: 100% !important;
 }
 
+#markdown br{
+	display: block;
+}
 /*커서*/
 /*
 .cursor {
