--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,10 @@
   <div class="footer__container">
     {% include social.html %}
   </div>
-  <div class="copyright">
+  <!-- copyright 표시 -->
+  <!-- <div class="copyright">
     © Eunji Jeong. 2019
-  </div>
+  </div> -->
 </footer>
 
 {% include contact.html %}
