--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Eunji Jeong</title>
+<title>{% if page.title %}{{ page.title | escape }} | {{ site.title }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="description" content="{{ site.description }}">
 
 <meta itemprop="name" content="{{ site.name }}">
@@ -30,11 +30,11 @@
 
 <link rel="stylesheet" href="{{ '/assets/css/app.min.css' | prepend: site.baseurl }}">
 
-<!-- eunji -->
+<!-- coustome.css 파일 임포트 -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | prepend: site.baseurl }}">
 
-
-
+<!-- jquery 불러오기 -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl }}">
@@ -50,5 +50,3 @@
   </script>
 {% endif %}
 
-
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
